--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ github_username:  jekyll
 # Build settings
 markdown: kramdown
 theme: jekyll-theme-tactile
+# theme: minima
 plugins:
   - jekyll-feed
   - jekyll-assets
